--- a/workspace/css/creative.css
+++ b/workspace/css/creative.css
@@ -18,7 +18,7 @@ body {
 hr {
   border-color: #F05F40;
   border-width: 3px;
-  max-width: 50px;
+  max-width: 30%;
 }
 hr.light {
   border-color: white;
@@ -40,6 +40,7 @@ h4,
 h5,
 h6 {
   font-family: 'Noto Sans KR', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  color: white;
 }
 p {
   font-size: 16px;
@@ -217,16 +218,22 @@ header .header-content .header-content-inner p {
 }
 .service-box {
   max-width: 400px;
-  margin: 50px auto 0;
+  margin: 35px auto 5px;
 }
 @media (min-width: 992px) {
   .service-box {
-    margin: 20px auto 0;
+    margin: 23px auto 0;
   }
 }
 .service-box p {
   margin-bottom: 0;
+  color: white;
 }
+
+#contact {
+  color: white;
+}
+
 .portfolio-box {
   position: relative;
   display: block;
@@ -417,4 +424,40 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #222222;
+}
+
+/* Custom Settings */
+
+h1 .small,
+h2 .small,
+h3 .small,
+h4 .small,
+h5 .small,
+h6 .small {
+  color:white;
+}
+
+.custom-open-table:hover,
+.custom-open-timeline:hover {
+  opacity:0.7;
+  cursor:pointer;
+}
+
+.tldate:hover {
+  cursor:pointer;
+  box-shadow: 3px 3px 10px #333333;
+}
+
+.tl-heading > p {
+  margin-bottom:5px;
+}
+
+.progress {
+  margin: 8px auto 7px;
+}
+
+td {
+  font-size: 1.2em;
+  color: white;
+  vertical-align: middle;
 }
