--- a/css/creative.css
+++ b/css/creative.css
@@ -276,6 +276,7 @@ header .header-content .header-content-inner p {
 }
 .portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
+  cursor:pointer;
 }
 .portfolio-box:focus {
   outline: none;
